language/move-lang/tests/move_check/typing/constraints_not_satisfied_all_cases.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_all_cases.move:3:20 ───
   │
 7 │     no_constraint<T>(c: CupC<T>, r: CupR<T>) {}
   │                         ^^^^^^^ Constraint not satisfied. The type 'T' does not satisfy the constraint 'copyable'
   ·
 7 │     no_constraint<T>(c: CupC<T>, r: CupR<T>) {}
   │                   - The type's constraint information was declared here
   ·
 3 │     struct CupC<T: copyable> {}
   │                    -------- 'copyable' constraint declared here
   │

error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_all_cases.move:2:20 ───
   │
 7 │     no_constraint<T>(c: CupC<T>, r: CupR<T>) {}
   │                                     ^^^^^^^ Constraint not satisfied. The copyable type 'T' does not satisfy the constraint 'resource'
   ·
 7 │     no_constraint<T>(c: CupC<T>, r: CupR<T>) {}
   │                   - The type's constraint information was declared here
   ·
 2 │     struct CupR<T: resource> {}
   │                    -------- 'resource' constraint declared here
   │

error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_all_cases.move:3:20 ───
   │
 9 │     t_resource<T: resource>(c: CupC<T>, r: CupR<T>) {}
   │                                ^^^^^^^ Constraint not satisfied. The resource type 'T' does not satisfy the constraint 'copyable'
   ·
 9 │     t_resource<T: resource>(c: CupC<T>, r: CupR<T>) {}
   │                   -------- The type's constraint information was declared here
   ·
 3 │     struct CupC<T: copyable> {}
   │                    -------- 'copyable' constraint declared here
   │

error: 

    ┌── tests/move_check/typing/constraints_not_satisfied_all_cases.move:2:20 ───
    │
 11 │     t_copyable<T: copyable>(c: CupC<T>, r: CupR<T>) {}
    │                                            ^^^^^^^ Constraint not satisfied. The copyable type 'T' does not satisfy the constraint 'resource'
    ·
 11 │     t_copyable<T: copyable>(c: CupC<T>, r: CupR<T>) {}
    │                   -------- The type's constraint information was declared here
    ·
 2 │     struct CupR<T: resource> {}
    │                    -------- 'resource' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/constraints_not_satisfied_all_cases.move:3:20 ───
    │
 13 │     r(c: CupC<R>, r: CupR<R>) {}
    │          ^^^^^^^ Constraint not satisfied. The resource type '0000000000000000000000000000000000000000000000000000000008675309.M.R' does not satisfy the constraint 'copyable'
    ·
 4 │     resource struct R {}
    │     -------- The type's constraint information was declared here
    ·
 3 │     struct CupC<T: copyable> {}
    │                    -------- 'copyable' constraint declared here
    │

error: 

    ┌── tests/move_check/typing/constraints_not_satisfied_all_cases.move:2:20 ───
    │
 15 │     c(c: CupC<C>, r: CupR<C>) {}
    │                      ^^^^^^^ Constraint not satisfied. The copyable type '0000000000000000000000000000000000000000000000000000000008675309.M.C' does not satisfy the constraint 'resource'
    ·
 5 │     struct C {}
    │            - The type's constraint information was declared here
    ·
 2 │     struct CupR<T: resource> {}
    │                    -------- 'resource' constraint declared here
    │

